@@ -730,11 +730,10 @@ class Config(configfile.ConfigFileWithProfiles):
     def passwordUseCache(self, profile_id = None, mode = None):
         if mode is None:
             mode = self.snapshotsMode(profile_id)
-        default = not tools.checkHomeEncrypt()
         #?Cache password in RAM so it can be read by cronjobs.
         #?Security issue: root might be able to read that password, too.
-        #?<MODE> must be the same as \fIprofile<N>.snapshots.mode\fR;;true if home is not encrypted
-        return self.profileBoolValue('snapshots.%s.password.use_cache' % mode, default, profile_id)
+        #?<MODE> must be the same as \fIprofile<N>.snapshots.mode\fR;;true
+        return self.profileBoolValue('snapshots.%s.password.use_cache' % mode, True, profile_id)
 
     def setPasswordUseCache(self, value, profile_id = None, mode = None):
         if mode is None:
