@@ -16,6 +16,7 @@ Version 1.5.3-dev (development of upcoming release)
 * Refactor: Remove os.system() from class Execute
 * Refactor: Systray notifications send utilize DBUS instead of notify-send (#1156) (Felix Stupp @Zocker1999NET)
 * Refactor!: Remove unused config field "user_callback.no_logging" (#1887)
+* Refactor!: Remove eCryptFS check for home folder (#1855)
 * Dependency: Remove libnotify-bin (notify-send) (#1156)
 * Build: Replace "pycodestyle" linter with "flake8" (#1839)
 
